# salga-trust-engine

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  README.md  SALGA.md  alembic.ini  convo.md  package-lock.json  package.json  phase-6.5.md  pyproject.toml  render.yaml  task2_coverage.txt
.deepeval/: .deepeval_telemetry.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
alembic/: env.py
e2e-tests/: .env.test.example  .gitignore  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  screenshot-pms.ts  test-results.json  tsconfig.json
frontend/: package-lock.json  package.json
frontend-dashboard/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-public/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
pitch-deck/: package-lock.json  package.json
scripts/: remediate_unconfirmed_accounts.sql  seed_pilot_municipalities.py
shared/: animations.css  design-tokens.css  tokens.ts
src/: main.py
streamlit_dashboard/: api_client.py  app.py
tests/: conftest.py  test_3way_communication.py  test_api_security_audit.py  test_assignment_service.py  test_audit.py  test_auth.py  test_auth_tools.py  test_conversation.py  test_crew_server_integration.py  test_dashboard_api.py  test_dashboard_service.py  test_departments_api.py  test_encryption.py  test_escalation_service.py  test_event_broadcaster.py  test_export_api.py  test_gbv_crew.py  test_gbv_firewall.py  test_gbv_firewall_comprehensive.py  test_gbv_firewall_public.py  test_guardrails.py  test_image_utils.py  test_intake_flow.py  test_language.py  test_manager_crew.py  test_messages_api.py  test_middleware.py  test_middleware_unit.py  test_multitenancy.py  test_municipal_crew.py  test_municipalities.py  test_ocr_service.py  (+40 more)
(+1052 files in other folders)
